--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
+<!-- Hero Section Starts -->
 <div class="px-4 py-5 my-5 text-center">
   <img class="d-block mx-auto mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
   <h1 class="display-5 fw-bold">Centered hero</h1>
@@ -12,3 +13,4 @@
     </div>
   </div>
 </div>
+<!-- Hero Section Ends -->
